Let onboarding appear one time only

--- a/Shayal/View/Forgot Password/ar.lproj/ForgotPasswordVC.strings
+++ b/Shayal/View/Forgot Password/ar.lproj/ForgotPasswordVC.strings
@@ -9,7 +9,7 @@
 "maX-6X-b12.text" = "قم بإدخال رقم الجــوال المسجل به";
 
 /* Class = "UIButton"; configuration.title = "Next"; ObjectID = "sZT-f8-Gce"; */
-"sZT-f8-Gce.configuration.title" = "متــباعة";
+"sZT-f8-Gce.configuration.title" = "متــابعة";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "sZT-f8-Gce"; */
 "sZT-f8-Gce.normalTitle" = "Button";
